Fix LanguageSelector alignment issue

--- a/app/components/LanguageSelector/LanguageSelector.module.scss
+++ b/app/components/LanguageSelector/LanguageSelector.module.scss
@@ -1,7 +1,20 @@
 .languageSelectorOuterWrapper {
     display: flex;
+    align-items: center;
     container-type: inline-size; 
     width: 100%;
+
+    &.alignLeft {
+        justify-content: flex-start;
+    }
+
+    &.alignCenter {
+        justify-content: center;
+    }
+
+    &.alignRight {
+        justify-content: right;
+    }
 }
 
 .languageSelectorWrapper {
@@ -9,7 +22,7 @@
     align-items: center;
     position: relative; 
     font-family: "NetflixMedium";
-    margin-left: auto;
+    font-size: 0.875rem;
 
     .languageSelectorIcon {
         position: absolute;
@@ -30,7 +43,7 @@
         border: none;
         background: var(--grey-dark-transparent);
         color: var(--white);
-        border: 1px solid var(--white-transparent);
+        border: 1px solid #ffffff66;
         border-radius: .25rem;
         padding-block: .5rem;
         padding-inline: 1.6rem;
